rustcc/tests/input/parser/invalid/unclosed_paren.c
// RUN: ${{rustcc}}
// EXPECT-FAILURE

int main( {
    return 0;
}